= Release notes

== 0.1-alpha-1
First alpha release

== 0.1-alpha-2
* Documentation updates
* Component tests for `db-objekts-mariadb`, using TestContainers.
* User MariaDB 10.10 in TestContainers setup
* Rework in CodeGenerator configuration for setting sequences for primary keys. Separate configurer for greater clarity


== 0.2.1-alpha

* Introducing stateful and immutable row objects for CRUD operations
* Use DbObjektsException and subclasses instead of generic IllegalStateException
* Documentation and component tests

== 0.2.2-alpha
* Support for custom column types in native sql queries

== 0.3.0-alpha
* Support for aggregate select queries: `avg()`, `sum()`, `count[Distinct]()`, `min()`, `max()`
* Support for `distinct()` in select queries
* An optional `having()` clause to constrain results in aggregate select statements.

== 0.3.1-alpha
* Refactoring to reduce visibility of platform-internal properties and methods in the public API. In cases where this is not possible, it is clearly marked in Dokka comments.
* General code cleanup. Removed some redundant interfaces.
* Various test enhancements
* Overall documentation improvements

=== functionality
* New `LegacyDateColumn` to handle java.sql.Date without conversion to/from java.time API.